plugins {
    id 'groovy'
    id 'application'
    id 'maven-publish'
    id 'java-library'
}

group 'com.mentalresonance'
version '2.0'

repositories {
    mavenLocal()
    mavenCentral()
    // Needed to get spock snapshot below
    maven { url 'https://central.sonatype.com/artifact/org.spockframework/spock-core' }
}

dependencies {
    // This version for Java 21
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'org.spockframework:spock-core:2.4-M7-groovy-4.0'
    testImplementation 'org.projectlombok:lombok:1.18.30'
    implementation "org.apache.logging.log4j:log4j-api:2.25.3"
    implementation "org.apache.logging.log4j:log4j-core:2.25.3"
    implementation "org.apache.logging.log4j:log4j-slf4j2-impl:2.25.3"
    // This version for Java 21
    compileOnly 'org.projectlombok:lombok:1.18.30'

    api "com.github.ben-manes.caffeine:caffeine:3.1.8"

    implementation("org.apache.fory:fory-core:0.15.0")

    implementation 'com.google.code.gson:gson:2.10.1'

    implementation platform('com.fasterxml.jackson:jackson-bom:latest.release')
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation 'com.fasterxml.jackson.core:jackson-annotations'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

def testArgs = [
    '-Xmx24g',
    '--add-opens=java.base/java.lang=ALL-UNNAMED',
    '--add-opens=java.base/java.math=ALL-UNNAMED',
    '--add-opens=java.base/java.util=ALL-UNNAMED',
    '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
    '--add-opens=java.base/java.net=ALL-UNNAMED',
    '--add-opens=java.base/java.text=ALL-UNNAMED',
    '--add-opens=java.sql/java.sql=ALL-UNNAMED'
]

tasks.named('test', Test) {
    useJUnitPlatform()
    jvmArgs += testArgs
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile) {
    options.debug = true
    options.debugOptions.debugLevel = 'source,lines,vars'
    // options.compilerArgs << '-g:none' // Ensures no debug information is included
}

javadoc.options {
    addStringOption('-release', '21')
}

tasks.withType(JavaCompile).each {
    // it.options.compilerArgs.add('-Xlint:preview')
}


java {
    withSourcesJar()
}

